--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "microcms-js-sdk": "^3.1.0",
     "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "22.10.10",
+    "@types/react": "19.0.8",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.7.3"
   }
 }
