--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
     "microcms-js-sdk": "^3.1.0",
     "next": "^14.0.4",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18"
   },
